# specgate

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  .grype.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: issue-labeler.mjs  issue-labeler.test.mjs
.github/workflows/: agents.yml  cli.yml  doc-registry.yml  issue-labeler.yml  pages.yml  plugins.yml  release-readiness.yml  release.yml  ui.yml
app/agents/: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
app/agents/docs/: README.md  prd.md  spec.md
app/agents/docs/governance/docs/: README.md  event-contract.md  spec.md
app/agents/evals/: README.md  __init__.py  _factories.py  eval_contract.py  harness.py  run.py  test_eval_contract.py  thresholds.toml
app/agents/evals/datasets/: ac_satisfaction_contract.jsonl  quality_gate_contract.jsonl
app/agents/evals/fixtures/: artifact_supplier_listing_prd.md  history_thread_excerpt.md  knowledge_payments_overview.md  knowledge_search_indexing.md  repo_supplier_filter_handler.md
app/agents/evals/quality_gates/: gold_data.py  test_gold_data.py
app/agents/src/: sitecustomize.py
app/agents/src/specgate_agents/: __init__.py  langgraph_config.py
app/agents/src/specgate_agents/governance/: AGENTS.md  __init__.py  attachments.py  config.py  constants.py  governance_chat.py  llm_structured.py  main_agent.py  prompt_budget.py  provider_keys.py  title_api.py  webapp.py
app/agents/src/specgate_agents/governance/agents/: __init__.py  factories.py
app/agents/src/specgate_agents/governance/board/: __init__.py  context_pack.py  delivery_review.py  quality_gates.py  quick_work_item.py  route_classifier.py  route_suggestion.py
app/agents/src/specgate_agents/governance/intent/: __init__.py  title.py
app/agents/src/specgate_agents/governance/quality_gates/: __init__.py  completeness.py  delivery_review.py  judge.py  profile_snapshot.py
app/agents/src/specgate_agents/governance/registry/: __init__.py  client.py
app/agents/tests/: conftest.py  test_artifact_readiness_route.py  test_config.py  test_langgraph_config.py  test_live_smoke_governance.py  test_model_resolution.py  test_provider_keys_openrouter.py  test_provider_keys_sticky.py  test_quick_work_item.py  test_registry.py  test_runtime_policy_settings.py  test_self_hosted_image.py  test_structured_output_callback_isolation.py  test_telemetry_privacy.py  test_title_api.py  test_webapp.py  test_workboard.py
app/agents/tests/_fakes/: in_memory_registry.py
app/agents/tests/governance/: test_artifact_readiness.py  test_attachments.py  test_board_delivery_review.py  test_completeness.py  test_delivery_review.py  test_governance_chat.py  test_profile_snapshot.py  test_prompt_budget.py  test_quality_gate_judge.py  test_registry_bundle_by_role.py  test_route_classifier.py
app/cli/: .gitignore  AGENTS.md  Makefile  go.mod  go.sum
app/doc-registry/: .air.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
app/landing/: README.md  index.html  landing.test.mjs  robots.txt  script.js  sitemap.xml  styles.css
app/ui/: .env.example  .env.production  AGENTS.md  DESIGN.md  DESIGN_PLAN.md  PROGRESS.md  README.md  index.html  knip.json  openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
deploy/: README.md
deploy/compose/: agents.env.example  compose.yml  doc-registry.env.example
deploy/local/: .env.example  compose.yml  specgate.env.example
docker/: Dockerfile.agents  Dockerfile.doc-registry  Dockerfile.local  Dockerfile.ui  Dockerfile.ui.dockerignore
docker/local/: backup.sh  entrypoint.sh  health_server.py  healthcheck.sh  nginx.conf  service-finish.sh
docs/: README.md  contracts.md  data-model.md  features.md  quickstart.md  release-readiness.test.mjs  testing.md
plugins/: README.md  install.sh  package.json
scripts/: check-ports.sh  dev-secrets.sh  install-cli.sh
(+796 files in other folders)
