[project]
name = "specgate-agents"
version = "0.1.0"
description = "LangGraph governance-ops for SpecGate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.0",
    "langgraph-sdk>=0.4.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langsmith>=0.3.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "langchain-google-genai>=2.0.0",
    "langgraph-cli[inmem]>=0.4.22",
    # Pinned explicitly; langgraph-cli caps api<0.8 — see [tool.uv] override-dependencies.
    "langgraph-api>=0.8.0",
    "fastapi>=0.118.0",
    "jsonschema>=4.0.0",
    # ASGI server for serving webapp.py directly (without the LangGraph runtime).
    "uvicorn[standard]>=0.49.0",
    "langchain-openrouter>=0.2.3",
]

[tool.uv]
# Allow langgraph-api 0.8+ while langgraph-cli[inmem] still declares <0.8 (until CLI releases a compatible bump).
override-dependencies = [
    "langgraph-api>=0.8.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.deptry]
known_first_party = ["evals", "specgate_agents"]

[tool.deptry.per_rule_ignores]
# Runtime entry points and LangChain provider discovery load these packages
# without direct Python imports.
DEP002 = [
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-openrouter",
    "langgraph",
    "langgraph-api",
    "langgraph-cli",
    "uvicorn",
]
# Eval tests are executable test modules even though they live under evals/.
DEP004 = ["pytest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# Default run excludes the opt-in external-service smoke suite.
# Run it explicitly with:
# `GOVERNANCE_LIVE_SMOKE=1 uv run pytest -m live_smoke`.
addopts = "-m 'not live_smoke'"
markers = [
    "live_smoke: opt-in smoke test that calls a real external service (LangSmith)",
]
